Added Request logging middlewear

--- a/Se130RPGGame/appsettings.json
+++ b/Se130RPGGame/appsettings.json
@@ -11,5 +11,5 @@
   "Token": {
     "Secret": "My secret secret keyMy secret secret keyMy secret secret keyMy secret secret key"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*" // asterisk
 }
